# qbo-system

./: .gitignore  README.md  pyproject.toml
config/: PL_columns.json  info.json
doc/: system_design.txt
doc/admin/: token_refresh_procedure.txt
doc/backbone_structure/: repo_design.txt
doc/code_logic/: PL_flatten.txt
docs/architecture-design/: invariants.md
docs/architecture_design/: README.md  invariants.md
docs/architecture_design/structural-layer/: 01-schema-discovery.md
docs/failure-log/: v1.md
docs/failure-log/qbo/: prevented_failures.md  scale_risks.md
docs/notes/: 00-2603-future-outlook.md  01-2603-architecture-decision.md  03-2603-diverse-data-sources.md
docs/notes/dev-logs/: 2026.md
docs/raw-structures/: 01-PL.md
notebooks/: dev.ipynb
quick-demos/: qbo_silver_flatten.ipynb
src/data_platform/core/engine/: data_ops.py  spark.py
src/data_platform/core/json_configs/: config_schema.json
src/data_platform/core/json_configs/system/: spark.json
src/data_platform/core/utils/: filesystem.py  spark.py
src/data_platform/qbo/json_configs/contracts_silver/: columns.json
src/data_platform/qbo/json_configs/state/: fx.json
src/data_platform/qbo/silver/: nested_reports.py
src/data_platform/qbo/utils/: filesystem.py  task_schedular.py
src/data_platform/sources/qbo/json_configs/: config_schema.json
src/qbo_etl/: __init__.py
src/qbo_etl/io/: file_read.py
src/qbo_etl/json_configs/contracts/: company.info.json
src/qbo_etl/json_configs/io/: database.path.json
src/qbo_etl/pl/: flatten.py
src/qbo_etl/utils/: spark.py  task_schedular.py
(+12 files in other folders)
