[project]
name = "spark-etl"
version = "0.1.0"
description = "Spark refactor experimentation for ETL in Python and Pandas"
authors = [
    {name = "ZheRao",email = "zheraoeminem@gmail.com"}
]
#readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (==3.5.1)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "orjson (>=3.11.4,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "intuit-oauth (>=1.2.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "qbo_etl", from = "src" }
]


[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
