[project]
name = "data-platform"
version = "0.1.0"
description = "Currently focusing on QBO ETL with PySpark"
authors = [
    {name = "ZheRao",email = "zheraoeminem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=4.1.1,<5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "intuit-oauth (>=1.2.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data-platform"

packages = [
  { include = "data_platform", from = "src" }
]

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
